--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Highway 404</title>
+    <title>GAME</title>
     <style>
       * {
         box-sizing: border-box;
