WIP title screen

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>GAME</title>
+    <title>Vote By Mail: Funding Not Found</title>
     <style>
       * {
         box-sizing: border-box;
@@ -28,6 +28,36 @@
 
       html {
         height: 100vh;
+      }
+
+      .vbm {
+        text-align: center;
+        background-color: white;
+      }
+      
+      a {
+        color: #000;
+      }
+
+
+      a:link {
+        color: #000;
+      }
+
+      a:visited {
+        color: #000;
+      }
+
+      a:focus {
+        color: #000;
+      }
+
+      a:hover {
+        color: #000;
+      }
+
+      a:active {
+        color: #000;
       }
 
       html,
@@ -98,6 +128,9 @@
   <body>
     <div id="parent"><canvas id="game"></canvas>
 
+    <div class="vbm">
+      <a href="https://www.usa.gov/absentee-voting">Visit USA.gov/absentee-voting for more information on voting by mail in your state</a>
+    </div>
     <!--<div id="log"></div>-->
     </div>
   </body>
