--- a/src/index.html
+++ b/src/index.html
@@ -30,16 +30,9 @@
         height: 100vh;
       }
 
-      .vbm {
-        padding: 5px;
-        text-align: center;
-        background-color: white;
-      }
-      
       a {
         color: #000;
       }
-
 
       a:link {
         color: #000;
@@ -77,7 +70,6 @@
         body {
           background: rgb(148,0,0);
           background: linear-gradient(90deg, rgba(148,0,0,1) 0%, rgba(255,255,255,1) 50%, rgba(8,0,129,1) 100%);
-
         }
       }
 
@@ -111,6 +103,13 @@
 				animation-iteration-count: infinite;
 			}
 
+      .vbm {
+        padding: 5px;
+        text-align: center;
+        background-color: white;
+        flex-shrink: 0;
+      }
+      
 			@keyframes shake {
 				0% { transform: translate(1px, 1px) rotate(0deg); }
 				10% { transform: translate(-1px, -2px) rotate(-2deg); }
@@ -127,12 +126,12 @@
     </style>
   </head>
   <body>
-    <div id="parent"><canvas id="game"></canvas>
-
-    <div class="vbm">
-      <a href="https://www.usa.gov/absentee-voting">Visit USA.gov/absentee-voting for more information on voting by mail in your state</a>
-    </div>
-    <!--<div id="log"></div>-->
+    <div id="parent">
+      <canvas id="game"></canvas>
+      <div class="vbm">
+        <a href="https://www.usa.gov/absentee-voting">Visit USA.gov/absentee-voting for more information on voting by mail in your state</a>
+      </div>
+      <!--<div id="log"></div>-->
     </div>
   </body>
 </html>
