--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
         padding: 5px;
         text-align: center;
         background-color: white;
+        font-weight: bold;
       }
 
       #canvas-wrapper {
