--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      />
     <title>Vote By Mail: Funding Not Found</title>
     <style>
       * {
