--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,11 @@
 				animation-iteration-count: infinite;
 			}
 
+			.land {
+				animation: land 0.5s;
+				animation-iteration-count: 2;
+			}
+
       .vbm {
         padding: 5px;
         text-align: center;
@@ -121,6 +126,20 @@
         justify-content: center;
         height: 100%;
       }
+
+			@keyframes land {
+				0% { transform: translate(0, 2px); }
+				10% { transform: translate(0, -4px); }
+				20% { transform: translate(0, 0px); }
+				30% { transform: translate(0, 4px); }
+				40% { transform: translate(0, -2px); }
+				50% { transform: translate(0, 4px); }
+				60% { transform: translate(0, 2px); }
+				70% { transform: translate(0, 2px); }
+				80% { transform: translate(0, -2px); }
+				90% { transform: translate(0, 4px); }
+				100% { transform: translate(0, -4px); }
+			}
       
 			@keyframes shake {
 				0% { transform: translate(1px, 1px) rotate(0deg); }
