--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,7 @@
 			}
 
       .vbm {
+        color: #000;
         padding: 5px;
         text-align: center;
         background-color: white;
@@ -158,6 +159,10 @@
   </head>
   <body>
     <div id="parent">
+      <div class="vbm">
+        up or tap to jump &#x1f579; left/right or swipe to turn
+      </div>
+
       <div id="canvas-wrapper"><canvas id="game"></canvas></div>
       <div class="vbm">
         <a href="https://www.usa.gov/absentee-voting">Visit USA.gov/absentee-voting for more information on voting by mail in your state</a>
