Add some ground shake

--- a/src/index.html
+++ b/src/index.html
@@ -109,8 +109,8 @@
 			}
 
 			.land {
-				animation: land 0.5s;
-				animation-iteration-count: 2;
+				animation: land .35s;
+				animation-iteration-count: 1;
 			}
 
       .vbm {
@@ -130,16 +130,16 @@
 
 			@keyframes land {
 				0% { transform: translate(0, 2px); }
-				10% { transform: translate(0, -4px); }
-				20% { transform: translate(0, 0px); }
-				30% { transform: translate(0, 4px); }
-				40% { transform: translate(0, -2px); }
-				50% { transform: translate(0, 4px); }
-				60% { transform: translate(0, 2px); }
-				70% { transform: translate(0, 2px); }
-				80% { transform: translate(0, -2px); }
-				90% { transform: translate(0, 4px); }
-				100% { transform: translate(0, -4px); }
+				10% { transform: translate(0, -2px); }
+				20% { transform: translate(0, 4px); }
+				30% { transform: translate(0, -4px); }
+				40% { transform: translate(0, 8px); }
+				50% { transform: translate(0, -8px); }
+				60% { transform: translate(0, 4px); }
+				70% { transform: translate(0, -4px); }
+				80% { transform: translate(0, 2px); }
+				90% { transform: translate(0, -2px); }
+				100% { transform: translate(0, 0px); }
 			}
       
 			@keyframes shake {
