Pan in instructions

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="parent">
       <div class="vbm">
-        up or tap to jump &#x1f579; left/right or swipe to turn
+        up or tap to jump &#x1f579; left/right or drag to turn
       </div>
 
       <div id="canvas-wrapper"><canvas id="game"></canvas></div>
